--- a/iaroapp/templates/base_generic.html
+++ b/iaroapp/templates/base_generic.html
@@ -51,7 +51,7 @@
 
     <div class="container-fluid">
         {% for message in messages %}
-        <div class="alert alert-{{ message.tags }}" role="alert" style="margin-bottom: 0;">
+        <div class="alert alert-{{ message.tags }}" role="alert" style="margin-bottom: 0; border-radius: 0.5rem;">
             {{ message }}
         </div>
         {% endfor %}
@@ -88,6 +88,10 @@
     }
     .title {
         gap: 0.5rem;
+    }
+    .alert {
+        border-radius: 1rem;
+        background-image: none;
     }
 </style>
 
