--- a/inventory/templates/inventory_packaging.html
+++ b/inventory/templates/inventory_packaging.html
@@ -22,26 +22,30 @@
                     <div class="table-responsive p-0">
                         <table class="table align-items-center mb-2 table-collapse">
 
-                            <thead>
                             {% for target_branch in target_branches %}
-                                <tr class="title">
-                                    <th colspan="4"><h6>Deliver to {{ target_branch }}</h6></th>
-                                </tr>
-                                <tr class="task-row-separator">
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 align-middle responsive__mobile-1">
-                                        Select
-                                    </th>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
-                                        Product
-                                    </th>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__hide responsive__mobile-1">
-                                        Storages
-                                    </th>
-                                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__mobile-1">
-                                        Needed
-                                    </th>
-                                </tr>
-                            </thead>
+                                <thead>
+                                    <tr class="title">
+                                        <th colspan="4">
+                                            <h6 style="margin-top: 20px">Deliver to {{ target_branch }}</h6>
+                                        </th>
+                                    </tr>
+                                </thead>
+                                <thead>
+                                    <tr class="task-row-separator">
+                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 align-middle responsive__mobile-1">
+                                            Select
+                                        </th>
+                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                                            Product
+                                        </th>
+                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__hide responsive__mobile-1">
+                                            Storages
+                                        </th>
+                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 responsive__mobile-1">
+                                            Needed
+                                        </th>
+                                    </tr>
+                                </thead>
 
                             <tbody>
 
@@ -50,8 +54,7 @@
                                         {% if product.needs_packaging and target_branch in product.get_storage_branches %}
 
                                             <tr class="entry">
-
-                                                <td>
+                                                <td style="width: 40px;">
                                                     <div class="d-flex px-4 responsive__mobile-2">
                                                         <!-- Adjusted to include name attribute starting with "done_" for js -->
                                                         <div class="form-check" >
@@ -62,7 +65,7 @@
                                                             </div>
                                                     </div>
                                                 </td>
-                                                <td>
+                                                <td >
                                                     <div class="d-flex align-items-center">
                                                         <label for="checkbox{{ forloop.counter }}" class="sr-only">Select {{ product.name }}</label>
                                                         <h6 class="mb-0 text-sm responsive__mobile-3">
@@ -86,22 +89,20 @@
                                                 </td>
 
                                                 <!-- Product Storages Display -->
-                                                <td>
-                                                    <div class="responsive__hide">
-                                                        <div class="badge-wrap d-flex align-items-center">
-                                                            {% for product_storage in product.product_storages.all %}
-                                                                {% if not product_storage.main_storage and product_storage.oos and product_storage.branch == target_branch %}
-                                                                    <span class="badge bg-secondary-subtle border border-secondary-subtle text-secondary">
-                                                                        <div class="d-flex align-items-center">
-                                                                            <svg class="bi me-1" width="16" height="16">
-                                                                                <circle cx="8" cy="8" r="7" fill="{{ product_storage.storage.color }}"></circle>
-                                                                            </svg>
-                                                                            {{ product_storage.storage.name }}
-                                                                        </div>
-                                                                    </span>
-                                                                {% endif %}
-                                                            {% endfor %}
-                                                        </div>
+                                                <td class="responsive__hide" style="width: 100%;">
+                                                    <div class="badge-wrap d-flex align-items-center">
+                                                        {% for product_storage in product.product_storages.all %}
+                                                            {% if not product_storage.main_storage and product_storage.oos and product_storage.branch == target_branch %}
+                                                                <span class="badge bg-secondary-subtle border border-secondary-subtle text-secondary">
+                                                                    <div class="d-flex align-items-center">
+                                                                        <svg class="bi me-1" width="16" height="16">
+                                                                            <circle cx="8" cy="8" r="7" fill="{{ product_storage.storage.color }}"></circle>
+                                                                        </svg>
+                                                                        {{ product_storage.storage.name }}
+                                                                    </div>
+                                                                </span>
+                                                            {% endif %}
+                                                        {% endfor %}
                                                     </div>
                                                 </td>
 
@@ -176,6 +177,9 @@
         .badge-wrap.d-flex {
             gap: 0.5rem;
     }
+        .badge svg {
+            width: 20px;
+        }
     @media (max-width: 1199px) {
         .responsive__hide {
             display: none;
@@ -190,9 +194,7 @@
             word-wrap: break-word;
             white-space: normal;
         }
-        .badge svg {
-            width: 22px;
-        }
+
     }
 
     @media (max-width: 629px) {
@@ -208,6 +210,9 @@
             width: 160px;!important;
             word-wrap: break-word;!important;
             white-space: normal;!important;
+        }
+        .badge svg {
+            width: 30px;
         }
     }
 
