--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -473,7 +473,7 @@
     new Chart(ctx1, {
       type: "line",
       data: {
-        labels: statistics['label'],
+        labels: statistics['labels'],
         datasets: [{
             label: "Work hours",
             tension: 0.4,
@@ -489,6 +489,7 @@
         ],
       },
       options: {
+        spanGaps: true,
         responsive: true,
         maintainAspectRatio: false,
         plugins: {
@@ -547,7 +548,7 @@
     new Chart(ctx2, {
       type: "line",
       data: {
-        labels: statistics['label'],
+        labels: statistics['labels'],
         datasets: [
           {
             label: "Tasks",
@@ -564,6 +565,7 @@
         ],
       },
       options: {
+        spanGaps: true,
         responsive: true,
         maintainAspectRatio: false,
         plugins: {
@@ -622,7 +624,7 @@
     new Chart(ctx3, {
       type: "line",
       data: {
-        labels: statistics['label'],
+        labels: statistics['labels'],
         datasets: [
           {
             label: "Ratings",
@@ -639,6 +641,7 @@
         ],
       },
       options: {
+        spanGaps: true,
         responsive: true,
         maintainAspectRatio: false,
         plugins: {
