fix: decimals and punch_clocks only loading once a day

--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -181,7 +181,7 @@
                 <h6>Your work hours: last 7 days</h6>
                 <p class="text-sm">
                     <i class="fa fa-clock text-success"></i>
-                    <span class="font-weight-bold">{{ statistics_sum.workHours }}</span>h
+                    <span class="font-weight-bold">{{ statistics_sum.workHours }}h</span>
                 </p>
             </div>
             <div class="card-body p-3">
