--- a/inventory/templates/inventory_packaging.html
+++ b/inventory/templates/inventory_packaging.html
@@ -5,7 +5,7 @@
         <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             {{ branch }}
         </button>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu dropdown-menu-end">
             {% for branch in branches %}
                 <li><a class="dropdown-item" href="?branch={{ branch }}">{{ branch }}</a></li>
             {% endfor %}
