fix: change black logo to white in darkmode

--- a/iaroapp/static/softTheme/css/soft-ui-dashboard.css
+++ b/iaroapp/static/softTheme/css/soft-ui-dashboard.css
@@ -13,6 +13,9 @@
     color: #ffffff;
 }
 
+body.dark-page .navbar-brand-img {
+    content:url("/static/images/logo_small_white.png");
+}
 /* END */
 
 :root {
