improve: rating cards

--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -209,7 +209,7 @@
     <div class="col-lg-4 mb-4">
         <div class="card z-index-2">
             <div class="card-header pb-0">
-                <h6>Your ratings: last 7 days</h6>
+                <h6>How your shifts went: last 7 days</h6>
                 <p class="text-sm">
                     <i class="fa fa-star text-success"></i>
                     <span class="font-weight-bold">{{ statistics_sum.ratings }}</span>
@@ -626,7 +626,7 @@
         labels: statistics['labels'],
         datasets: [
           {
-            label: "Ratings",
+            label: "Rating",
             tension: 0.4,
             borderWidth: 0,
             pointRadius: 0,
